<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="15dp">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/inputTimA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tima"
        android:gravity="center"/>

    <EditText
        android:id="@+id/inputTimB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/timb"
        android:layout_marginBottom="10dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/mulaiHitungSkor"
        android:text="Mulai"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"/>
</LinearLayout>